[B]1.0.6[/B]
- fixed: can't get full information by imdb id (nfo)

[B]1.0.5[/B]
- fixed: support decimal in rating

[B]1.0.4[/B]
- changed: treat search results as sorted
- updated: support MoviePosterDB posters and themoviedb fanarts again
- added: option to get trailer

[B]1.0.3[/B]
- updated: to use douban API v2

[B]1.0.2[/B]
- fixed: some chinese movie can't get title

[B]1.0.1[/B]
- fixed: can't get search results

[B]1.0.0[/B]
- Initial version