@@ -14,14 +14,14 @@
 		</RegExp>
 	</GetUrlByIMDBId>
 	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;http://movie.douban.com/j/subject_suggest?q=\1&lt;/url&gt;" dest="3">
+		<RegExp input="$$1" output="&lt;url&gt;http://api.douban.com/v2/movie/search?q=\1&lt;/url&gt;" dest="3">
 			<expression noclean="1"/>
 		</RegExp>
 	</CreateSearchUrl>
 	<GetSearchResults dest="8">
 		<RegExp input="$$3" output="&lt;results sorted=&quot;yes&quot;&gt;\1&lt;/results&gt;" dest="8">
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\1 - \3 (\4)&lt;/title&gt;&lt;url&gt;http://api.douban.com/v2/movie/subject/\2&lt;/url&gt;&lt;id&gt;\2&lt;/id&gt;&lt;/entity&gt;" dest="3+">
-				<expression repeat="yes">&quot;title&quot;:&quot;(.+?)&quot;,&quot;url&quot;:&quot;http:\\/\\/movie.douban.com\\/subject\\/([0-9]+)\\/[^&quot;]*&quot;,&quot;sub_title&quot;:&quot;(.*?)&quot;,&quot;year&quot;:&quot;([0-9]+)&quot;</expression>
+			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\1 - \2 (\3)&lt;/title&gt;&lt;url&gt;http://api.douban.com/v2/movie/subject/\4&lt;/url&gt;&lt;id&gt;\4&lt;/id&gt;&lt;/entity&gt;" dest="3+">
+				<expression repeat="yes">&quot;title&quot;:&quot;([^&quot;]*)&quot;,&quot;collect_count&quot;:\d*,&quot;original_title&quot;:&quot;([^&quot;]*)&quot;,&quot;subtype&quot;:&quot;movie&quot;,&quot;year&quot;:&quot;(\d*)&quot;,&quot;images&quot;:\{[^\}]*\},&quot;alt&quot;:&quot;[^&quot;]*&quot;,&quot;id&quot;:&quot;(\d*)&quot;</expression>
 			</RegExp>
 			<expression noclean="1"/>
 		</RegExp>
@@ -50,6 +50,12 @@
 				<expression>&quot;genres&quot;:\[(.+?)\]</expression>
 			</RegExp>
 			<RegExp input="$$8" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="5+">
+				<expression repeat="yes">&quot;(.+?)&quot;</expression>
+			</RegExp>
+			<RegExp input="$$1" output="\1" dest="8">
+				<expression>&quot;countries&quot;:\[(.+?)\]</expression>
+			</RegExp>
+			<RegExp input="$$8" output="&lt;country&gt;\1&lt;/country&gt;" dest="5+">
 				<expression repeat="yes">&quot;(.+?)&quot;</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="5+">
@@ -91,6 +97,12 @@
 				<expression>http://movie.douban.com/trailer/([0-9]+)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="\1" dest="8">
+				<expression noclean="1">编剧&lt;/span&gt;:(.*?)&lt;/span&gt;</expression>
+			</RegExp>
+			<RegExp input="$$8" output="&lt;credits&gt;\1&lt;/credits&gt;" dest="6+">
+				<expression repeat="yes">&lt;a href=[^&gt;]*&gt;(.*?)&lt;/a&gt;</expression>
+			</RegExp>
+			<RegExp input="$$1" output="\1" dest="8">
 				<expression>http://www.imdb.com/title/(tt[0-9]+)</expression>
 			</RegExp>
 			<RegExp conditional="movieposterdb" input="$$8" output="&lt;chain function=&quot;GetMoviePosterDBThumbs&quot;&gt;\1&lt;/chain&gt;" dest="6+">
@@ -105,7 +117,7 @@
 	<GetPoster dest="5">
 		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
 			<RegExp input="$$1" output="&lt;thumb preview=&quot;\1thumb\2&quot;&gt;\1raw\2&lt;/thumb&gt;" dest="6">
-				<expression repeat="yes" noclean="1,2">&lt;div class=&quot;cover&quot;&gt;&lt;a href=&quot;http://movie.douban.com/photos/photo/[0-9]+/&quot;&gt;&lt;img src=&quot;(http://[^/]+/view/photo/)thumb(/public/[^\.]+\.jpg)&quot; /&gt;</expression>
+				<expression repeat="yes" noclean="1,2">&lt;div class=&quot;cover&quot;&gt;\s*&lt;a href=&quot;http://movie.douban.com/photos/photo/[0-9]+/&quot;&gt;\s*&lt;img src=&quot;(http://[^/]+/view/photo/)thumb(/public/[^\.]+\.jpg)&quot; /&gt;</expression>
 			</RegExp>
 			<expression noclean="1"/>
 		</RegExp>
@@ -113,7 +125,7 @@
 	<GetFanart dest="5">
 		<RegExp input="$$6" output="&lt;details&gt;&lt;fanart&gt;\1&lt;/fanart&gt;&lt;/details&gt;" dest="5">
 			<RegExp input="$$1" output="&lt;thumb preview=&quot;\1thumb\2&quot;&gt;\1raw\2&lt;/thumb&gt;" dest="6">
-				<expression repeat="yes" noclean="1,2">&lt;div class=&quot;cover&quot;&gt;&lt;a href=&quot;http://movie.douban.com/photos/photo/[0-9]+/&quot;&gt;&lt;img src=&quot;(http://[^/]+/view/photo/)thumb(/public/[^\.]+\.jpg)&quot; /&gt;</expression>
+				<expression repeat="yes" noclean="1,2">&lt;div class=&quot;cover&quot;&gt;\s*&lt;a href=&quot;http://movie.douban.com/photos/photo/[0-9]+/&quot;&gt;\s*&lt;img src=&quot;(http://[^/]+/view/photo/)thumb(/public/[^\.]+\.jpg)&quot; /&gt;</expression>
 			</RegExp>
 			<expression noclean="1"/>
 		</RegExp>
